<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enjoyTheApp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tesSkills"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tesSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tesSkills"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/readQuestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/readQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readQuestions"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/createQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createQuestion"
        android:layout_marginBottom="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>